src/objects/ACCL__Account_Specific_Product_Condition__c.object
<CustomObject>
    <description>Holds the relation between a customer and the condition template.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Specific Product Conditions</relationshipLabel>
        <relationshipName>Account_Specific_Product_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Condition Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Customer_Reference__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Product_Reference__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Condition_Template__c</referenceTo>
        <relationshipLabel>Customer Specific Product Conditions</relationshipLabel>
        <relationshipName>Account_Specific_Product_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_List_Type__c</fullName>
        <description>Type of a price list</description>
        <label>Price List Type</label>
        <picklist>
            <picklistValues>
                <fullName>WS1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_List__c</fullName>
        <description>Type or usage of a price.</description>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_Type__c</fullName>
        <description>Type or usage of a price.</description>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Description__c</fullName>
        <description>Description of selected Product</description>
        <formula>ACCL__Product__r.ACCL__Description_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipName>Account_Specific_Product_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Quantity__c</fullName>
        <description>Used for quantity discounts.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Specific Product Condition</label>
    <nameField>
        <displayFormat>ASPC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Specific Product Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>This validates that Valid From cannot be greater than Valid Thru</description>
        <errorConditionFormula>ACCL__Valid_From__c  &gt;  ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From cannot be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>